--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,15 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    sourceSets {
+        main {
+            res {
+                srcDirs 'src\\main\\res',
+                        'src\\main\\res\\layouts\\home',
+                        'src\\main\\res\\layouts\\multilevelview'
+            }
+        }
+    }
 }
 
 dependencies {
